--- a/loop.html
+++ b/loop.html
@@ -7,17 +7,13 @@
  <script type="text/javascript">
  <!-- 
 function refresh_jump(){
- window.open("http://www.yahoo.co.jp/","newwindow");
+ window.open("https://fakeyjsnpi.github.io/loop.github.io/loop.html/","newwindow");
  }
  //-->
  </script>
  </head>
  <body onload="setTimeout('refresh_jump()',0);">
-
- <p>0秒後にYahoo!Japanのトップページを新規ウィンドウで開きます。<br>
- 自動的に開かない場合は、以下のリンクをクリックして下さい。</p>
-
- <p><a href="http://www.yahoo.co.jp/" target="_blank">http://www.yahoo.co.jp/</a></p>
+ <p><a href="https://fakeyjsnpi.github.io/loop.github.io/loop.html" target="_blank">https://fakeyjsnpi.github.io/loop.github.io/loop.html</a></p>
 
  </body>
  </html>
