--- a/loop.html
+++ b/loop.html
@@ -2,18 +2,18 @@
  <html lang="ja">
  <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- <title>looptest</title>
+ <title>loop</title>
  <meta http-equiv="Content-Script-Type" content="text/javascript">
  <script type="text/javascript">
  <!-- 
 function refresh_jump(){
- window.open("https://fakeyjsnpi.github.io/loop.github.io/loop.html/","newwindow");
+ window.open("https://fakeyjsnpi.github.io/loop.github.io/loop2.html/","newwindow");
  }
  //-->
  </script>
  </head>
  <body onload="setTimeout('refresh_jump()',0);">
- <p><a href="https://fakeyjsnpi.github.io/loop.github.io/loop.html" target="_blank">https://fakeyjsnpi.github.io/loop.github.io/loop.html</a></p>
+ <p><a href="https://fakeyjsnpi.github.io/loop.github.io/loop2.html" target="_blank">https://fakeyjsnpi.github.io/loop.github.io/loop2.html</a></p>
 
  </body>
  </html>
