--- a/loop2.html
+++ b/loop2.html
@@ -7,7 +7,7 @@
  <script type="text/javascript">
  <!-- 
 function refresh_jump(){
- window.open("hhttps://fakeyjsnpi.github.io/loop.github.io/loop.html","newwindow");
+ window.open("https://fakeyjsnpi.github.io/loop.github.io/loop.html","newwindow");
  }
  //-->
  </script>
