--- a/loop2.html
+++ b/loop2.html
@@ -12,7 +12,8 @@ function refresh_jump(){
  //-->
  </script>
  </head>
- <body onload="setTimeout('refresh_jump()',0);">
+ <body onload="setTimeout('refresh_jump()',1
+              );">
 
  <p><a href="https://fakeyjsnpi.github.io/loop.github.io/loop.html" target="_blank">https://fakeyjsnpi.github.io/loop.github.io/loop.html</a></p>
 
